@@ -90,6 +90,7 @@
     <Compile Include="src\modules\Targetting.cs" />
     <Compile Include="src\modules\UserInterfacePanels.cs" />
     <Compile Include="src\modules\HeauUpDisplay.cs" />
+    <Compile Include="src\modules\GameData.cs" />
     <Compile Include="src\modules\WeaponInformation.cs" />
   </ItemGroup>
   <ItemGroup>
